[project]
name = "internet-diagnosis-env"
version = "1.0.0"
description = "OpenEnv environment for internet outage diagnosis"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.42.0",
    "pydantic==2.12.5",
    "openai==2.30.0",
    "groq==1.1.2",
    "requests==2.32.3",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/Vedi23/internet-diagnosis-env"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"